# vamo

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  MIGRATION_GUIDE.md  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: code-coverage.yml  rust.yml
docs/: CONTRIBUTING.md  LICENSE.md  _config.yml  index.md  llms.txt  vamo-bora.md  vamo-macros.md  vamo.md
vamo/: Cargo.toml  README.md
vamo-macros/: Cargo.toml  README.md
vamo-macros/src/: lib.rs
vamo-macros/src/bora/: mod.rs
vamo-macros/src/bora/config/: api.rs
vamo-macros/src/bora/parser/: api.rs  mod.rs  utils.rs
vamo-macros/src/bora/parser/common/: field.rs
vamo-macros/src/bora/parser/operations/: delete.rs  get.rs  patch.rs  post.rs  put.rs
vamo-macros/src/bora/token/: utils.rs
vamo-macros/src/resource/: mod.rs
vamo/src/: lib.rs  resource.rs
vamo/src/tests/: mod.rs
