[workspace]
# Use the latest resolver available
resolver = "3"
# Include both parts of the library in the workspace
members = [
    "vamo",
    "vamo-macros",
]

[workspace.package]
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vamo"
homepage = "https://github.com/ararog/vamo"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

[workspace.dependencies]
deboa = { version = "0.1.0-beta.18" }
deboa-extras = { version = "0.0.9-beta.11" }
deboa-fory = { version = "0.1.6-beta.1", path = "deboa-fory" }
deboa-macros = { version = "0.1.0-beta.4", path = "deboa-macros" }
deboa-tokio = { version = "0.1.0-beta.5", path = "deboa-tokio" }
vamo = { version = "0.0.9-beta.5", path = "vamo" }
vamo-macros = { version = "0.0.9-beta.5", path = "vamo-macros" }

[profile.test]
lto = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
