[package]
name = "vamo-macros"
version = "0.0.9-beta.5"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Macros for quick client development using vamo"
license.workspace = true
readme = "README.md"
keywords = ["compiler-plugin", "macros", "resources", "http", "rest"]
publish = true
rust-version.workspace = true

[features]
default = ["json"]

# Serialization formats
json = ["deboa-extras/json"]
xml = ["deboa-extras/xml"]
msgpack = ["deboa-extras/msgpack"]

[lib]
proc-macro = true

[dependencies]
deboa = { workspace = true, default-features = false }
deboa-extras = { workspace = true, default-features = false, optional = true }
vamo = { workspace = true }
proc-macro2 = "1.0.103"
serde = "1.0.228"
syn = { version = "2.0", features = ["full"] }
quote = "1.0.41"
http = "1.4.2"
regex = "1.12.4"
titlecase = "3.6.0"
