[package]
name = "vamo"
version = "0.0.9-beta.5"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A rest wrapper for deboa http client."
readme = "README.md"
license.workspace = true
keywords = ["http", "networking", "client", "fetch", "rest-client"]
publish = true
rust-version.workspace = true

[features]
default = [
  "json",
]

json = ["deboa-extras/json"]

[dependencies]
base64 = "0.22.1"
deboa = { workspace = true, default-features = false }
deboa-extras = { workspace = true, default-features = false }
http = "1.4.2"
serde = "1.0.228"
url = "2.5.8"

[dev-dependencies]
caramelo = "0.1.1-beta.4"
